added artist page

--- a/artists.html
+++ b/artists.html
@@ -17,7 +17,7 @@
 	    <meta name="description" content="" />
 		<meta name="keywords" content="" />
 				
-		<meta name="author" content="" />		
+		<meta name="author" content="Juliano Moreira Dasilva" />		
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">								
 		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />		
 
@@ -52,7 +52,7 @@
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body class="home">	
+<body class="home artists-page">	
 
 <div class="header">
 
@@ -76,49 +76,62 @@
 <div class="row">
 
 	<div class="large-3 columns left-col">
-		<h3 class="section-title">categories</h3>
-		<ul class="category">
-			<li><a href="">Abstract Expressions</a></li>
-			<li><a href="">Contemporary</a></li>
-			<li><a href="">Surrealism</a></li>			
-		</ul>
+		<h3 class="section-title">artists</h3>
+		
+		<div class="artist-photo">
+			<img src="http://devcaldwellartimages.blob.core.windows.net/mikkimallow/ProfileImage/Mikki%20Mallow/profile_.jpg" />
+		</div>
+
 	</div> <!-- end left col -->
 
-	<div class="large-9 columns right-col">
-		<h3 class="section-title">Featured Artists</h3>
+	<div class="large-9 columns right-col">		
 
-		<div class="artist-excerpt group">
-			<div class="artist-photo">
-				<img src="http://devcaldwellartimages.blob.core.windows.net/mikkimallow/ProfileImage/Mikki%20Mallow/profile_.jpg" />
-			</div>
-			<div class="copy">
-				<h3>Mikki Mallow</h3>
-				<p>Bacon ipsum dolor sit amet pork chop short ribs hamburger, meatloaf shankle brisket filet mignon biltong shank tenderloin t-bone ball tip sirloin shoulder tail. Pork belly tenderloin hamburger porchetta. Tri-tip ham sirloin boudin, short ribs biltong frankfurter ball tip pork loin andouille. Spare ribs meatloaf flank ham hock andouille leberkas prosciutto beef rump tongue swine turkey venison ground round sirloin.</p>
-				<a href="#" class="button medium ">Learn more about Mikki</a>
-			</div>
-		</div> <!-- end artist excerpt -->
+		<div class="artist-bio">
 
-		<div class="artist-excerpt group">
-			<div class="artist-photo">
-				<img src="http://devcaldwellartimages.blob.core.windows.net/dylanhunt/ProfileImage/Dylan%20Hunt/profile_.jpg" />
-			</div>
-			<div class="copy">
-				<h3>Dylan Hunt</h3>
-				<p>Bacon ipsum dolor sit amet pork chop short ribs hamburger, meatloaf shankle brisket filet mignon biltong shank tenderloin t-bone ball tip sirloin shoulder tail. Pork belly tenderloin hamburger porchetta. Tri-tip ham sirloin boudin, short ribs biltong frankfurter ball tip pork loin andouille. Spare ribs meatloaf flank ham hock andouille leberkas prosciutto beef rump tongue swine turkey venison ground round sirloin.</p>
-				<a href="#" class="button medium">Learn more about Mikki</a>
-			</div>
-		</div> <!-- end artist excerpt -->
+			<h3 class="artist-name">Mikki Mallow</h3>
+			<p>Bacon ipsum dolor sit amet pork chop short ribs hamburger, meatloaf shankle brisket filet mignon biltong shank tenderloin t-bone ball tip sirloin shoulder tail. Pork belly tenderloin hamburger porchetta. Tri-tip ham sirloin boudin, short ribs biltong frankfurter ball tip pork loin andouille. Spare ribs meatloaf flank ham hock andouille leberkas prosciutto beef rump tongue swine turkey venison ground round sirloin.</p>
 
-		<div class="artist-excerpt group">
-			<div class="artist-photo">
-				<img src="http://devcaldwellartimages.blob.core.windows.net/nicolemorrow/ProfileImage/Nicole%20Morrow/profile_.jpg" />
+			<p>Bacon ipsum dolor sit amet pork chop short ribs hamburger, meatloaf shankle brisket filet mignon biltong shank tenderloin t-bone ball tip sirloin shoulder tail. Pork belly tenderloin hamburger porchetta. Tri-tip ham sirloin boudin, short ribs biltong frankfurter ball tip pork loin andouille. Spare ribs meatloaf flank ham hock andouille leberkas prosciutto beef rump tongue swine turkey venison ground round sirloin.</p>
+
+			<p>Bacon ipsum dolor sit amet pork chop short ribs hamburger, meatloaf shankle brisket filet mignon biltong shank tenderloin t-bone ball tip sirloin shoulder tail. Pork belly tenderloin hamburger porchetta. Tri-tip ham sirloin boudin, short ribs biltong frankfurter ball tip pork loin andouille. Spare ribs meatloaf flank ham hock andouille leberkas prosciutto beef rump tongue swine turkey venison ground round sirloin.</p>
+
+			<p>Bacon ipsum dolor sit amet pork chop short ribs hamburger, meatloaf shankle brisket filet mignon biltong shank tenderloin t-bone ball tip sirloin shoulder tail. Pork belly tenderloin hamburger porchetta. Tri-tip ham sirloin boudin, short ribs biltong frankfurter ball tip pork loin andouille. Spare ribs meatloaf flank ham hock andouille leberkas prosciutto beef rump tongue swine turkey venison ground round sirloin.</p>
+			
+		</div> <!-- end artist bio -->
+
+		<h3 class="sub-section-title">Art</h3>
+
+		<div class="artist-art">
+			
+		<div class="row">
+
+			<div class="large-4 columns">
+				<div class="art">
+					<img src="http://calwell.blob.core.windows.net/abstract/ArtImages/Abstract/Abstract%20-%2048%20x%2060%20mixed%20media%20on%20canvas.jpg" />
+				</div>
+				<h5>Abstract</h5>
+				<p>48 x 60 mixed media on canvas</p>
 			</div>
-			<div class="copy">
-				<h3>Nicole Morrow</h3>
-				<p>Bacon ipsum dolor sit amet pork chop short ribs hamburger, meatloaf shankle brisket filet mignon biltong shank tenderloin t-bone ball tip sirloin shoulder tail. Pork belly tenderloin hamburger porchetta. Tri-tip ham sirloin boudin, short ribs biltong frankfurter ball tip pork loin andouille. Spare ribs meatloaf flank ham hock andouille leberkas prosciutto beef rump tongue swine turkey venison ground round sirloin.</p>
-				<a href="#" class="button medium">Learn more about Mikki</a>
+
+			<div class="large-4 columns">
+				<div class="art">
+					<img src="http://calwell.blob.core.windows.net/hotel/ArtImages/Hotel/Hotel%20-%2048%20x%2060%20mixed%20media%20on%20canvas.jpg" />
+				</div>
+				<h5>Hotel</h5>
+				<p>48 x 60 mixed media on canvas</p>
 			</div>
-		</div> <!-- end artist excerpt -->
+
+			<div class="large-4 columns">
+				<div class="art">
+					<img src="http://calwell.blob.core.windows.net/suggestedreflection/ArtImages/Suggested%20Reflection/Suggested%20Reflection%20-%2048%20x%2060%20mixed%20media%20on%20canvas.jpg" />
+				</div>
+				<h5>Suggested Reflection</h5>
+				<p>48 x 60 mixed media on canvas</p>
+			</div>
+
+		</div>
+		
+		</div> <!-- end artist-art -->
 
 	</div> <!-- end right col -->
 
